fix: fix dark mode v3

--- a/app/components/modules/About/about.module.scss
+++ b/app/components/modules/About/about.module.scss
@@ -34,6 +34,7 @@
     padding: 2em;
     width: 100%;
     margin: auto 0;
+    color: black;
 
     @include custom-min-media($tablet) {
       width: 40%;
